# StudentScheduling

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  log_conf.yml  pyproject.toml
.github/workflows/: enforce_standards.yml
src/config/: logging.py
src/student_scheduling/: helper.py  main.py  models.py
src/student_scheduling/utils/: csv_utils.py  date_utils.py  helper.py  scheduling_utils.py
tests/: test_helper.py
tests/files/: a_day.csv  b_day.csv  bad.csv
tests/unit/: data.py  test_csv_utils.py  test_date_utils.py  test_helper.py
