[project]
name = "student-scheduling"
version = "0.1.0"
description = "Fast and efficient shift scheduling for student-run stores. Mainly built for my high school."
authors = [
    { name = "Mason Root", email = "contact@masonroot.dev" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'icalendar',
    'python-multipart',
    'fastapi[standard]',
    'black',
    'pylint',
    "pre-commit (>=4.3.0,<5.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "pandas (>=2.3.2,<3.0.0)"
]

[tool.poetry.scripts]
start = "src.student_scheduling.main:start"

[tool.poetry]
packages = [{ include = "student_scheduling", from = "src" }]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
pythonpath = "src"
addopts = [
    "--import-mode=importlib"
]
testpath = [
    "tests"
]